<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:background="#E0F2F1"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/project_0"
        android:text="@string/project_0_title"
        android:textColor="#004D40"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/abc_text_size_headline_material"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/project_1"
        android:layout_width="@dimen/dialog_fixed_width_major"
        android:layout_height="wrap_content"
        android:layout_below="@id/project_0"
        android:layout_marginBottom="@dimen/abc_button_padding_vertical_material"
        android:background="#F08C35"
        android:layout_centerHorizontal="true"
        android:text="@string/project_1_title"
        android:onClick="launchSpotifyStreamer"/>
    <Button
        android:id="@+id/project_2"
        android:layout_width="@dimen/dialog_fixed_width_major"
        android:layout_height="wrap_content"
        android:layout_below="@id/project_1"
        android:layout_marginBottom="@dimen/abc_button_padding_vertical_material"
        android:background="#F08C35"
        android:layout_centerHorizontal="true"
        android:text="@string/project_2_title"
        android:onClick="launchScoresApp"/>
    <Button
        android:id="@+id/project_3"
        android:layout_width="@dimen/dialog_fixed_width_major"
        android:layout_height="wrap_content"
        android:layout_below="@id/project_2"
        android:layout_marginBottom="@dimen/abc_button_padding_vertical_material"
        android:background="#F08C35"
        android:layout_centerHorizontal="true"
        android:text="@string/project_3_title"
        android:onClick="launchLibraryApp"/>
    <Button
        android:id="@+id/project_4"
        android:layout_width="@dimen/dialog_fixed_width_major"
        android:layout_height="wrap_content"
        android:layout_below="@id/project_3"
        android:layout_marginBottom="@dimen/abc_button_padding_vertical_material"
        android:background="#F08C35"
        android:layout_centerHorizontal="true"
        android:text="@string/project_4_title"
        android:onClick="launchBuildItBigger"/>
    <Button
        android:id="@+id/project_5"
        android:layout_width="@dimen/dialog_fixed_width_major"
        android:layout_height="wrap_content"
        android:layout_below="@id/project_4"
        android:layout_marginBottom="@dimen/abc_button_padding_vertical_material"
        android:background="#F08C35"
        android:layout_centerHorizontal="true"
        android:text="@string/project_5_title"
        android:onClick="launchXyzReader"/>
    <Button
        android:id="@+id/project_6"
        android:layout_width="@dimen/dialog_fixed_width_major"
        android:layout_height="wrap_content"
        android:layout_below="@id/project_5"
        android:layout_marginBottom="@dimen/abc_button_padding_vertical_material"
        android:background="#F50057"
        android:textColor="@color/bright_foreground_material_dark"
        android:layout_centerHorizontal="true"
        android:text="@string/project_6_title"
        android:onClick="launchMyCapstoneApp"/>
</RelativeLayout>
